--- a/EquiposTecnicosSN.Web/Views/Fabricantes/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Fabricantes/Index.cshtml
@@ -34,7 +34,7 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Nombre)
                                         </td>
-                                        <td>
+                                        <td class="action-columns">
                                             <a class="btn btn-default btn-xs"
                                                href="@Url.Action("Edit", new { id = item.FabricanteId })"
                                                title="Editar Fabricante">
