--- a/EquiposTecnicosSN.Web/Views/Marcas/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Marcas/Index.cshtml
@@ -37,7 +37,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Fabricante.Nombre)
                                     </td>
-                                    <td>
+                                    <td class="action-columns">
                                         <a class="btn btn-default btn-xs"
                                            href="@Url.Action("Edit", new { id = item.MarcaId })"
                                            title="Editar Marca">
