--- a/EquiposTecnicosSN.Web/Views/Proveedores/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Proveedores/Index.cshtml
@@ -31,7 +31,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Nombre)
                                     </td>
-                                    <td>
+                                    <td class="action-columns">
                                         <a class="btn btn-default btn-xs"
                                            href="@Url.Action("Edit", new { id = item.ProveedorId })"
                                            title="Editar Proveedor">
