--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -58,8 +58,8 @@
                             <li>
                                 <a href="#"><i class="fa fa-gears fa-fw"></i> Repuestos<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
-                                    <li>@Html.ActionLink("Stock", "Index", "StockRepuestos")</li>
                                     <li>@Html.ActionLink("Listado", "Index", "Repuestos")</li>
+                                    <li>@Html.ActionLink("Stocks", "Index", "StockRepuestos")</li>
                                 </ul>
                             </li>
                             <li>
@@ -78,6 +78,8 @@
                                     <ul class="nav nav-second-level">
                                         <li>@Html.ActionLink("Checklists MP", "Index", "ChecklistsMantenimientoPreventivo")</li>
                                         <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
+                                        <li>@Html.ActionLink("Sectores", "Index", "Sectores")</li>
+                                        <li>@Html.ActionLink("Códigos UMDNS", "Index", "Umdns")</li>
                                         <li>@Html.ActionLink("Fabricantes", "Index", "Fabricantes")</li>
                                         <li>@Html.ActionLink("Marcas", "Index", "Marcas")</li>
                                         <li>@Html.ActionLink("Modelos", "Index", "Modelos")</li>
