--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
@@ -78,7 +78,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Descripcion)
                                     </td>
-                                    <td>
+                                    <td class="action-columns">
                                         <a class="btn btn-default btn-xs btn-list"
                                            href="@Url.Action("Edit", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Editar Orden de trabajo">
