--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMP.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMP.cshtml
@@ -72,7 +72,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.FechaInicio)
                                     </td>
-                                    <td>
+                                    <td class="action-columns">
                                         <a class="btn btn-default btn-xs btn-list"
                                            href="@Url.Action("Edit", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Editar Orden de trabajo">
