--- a/EquiposTecnicosSN.Web/Views/Shared/_ListSolicitudes.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListSolicitudes.cshtml
@@ -27,7 +27,7 @@
                                             <td>@Html.DisplayFor(item => sr.Repuesto.Codigo)</td>
                                             <td>@Html.DisplayFor(item => sr.CantidadRepuesto)</td>
                                             <td>@Html.DisplayFor(item => sr.Repuesto.Nombre)</td>
-                                            <td>
+                                            <td class="action-columns">
                                                 <a class="btn btn-default btn-xs"
                                                    data-toggle="modal" data-target="#modalSolicitudRepuestoServicioEquipo"
                                                    data-solicitud-id="@sr.SolicitudRepuestoServicioId"
