--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
@@ -61,7 +61,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input id="buscarEquipo" type="submit" value="Buscar" class="btn btn-primary" />
+                                <input id="buscarEquipo" type="submit" value="Buscar" class="btn btn-primary pull-right" />
                             </div>
                         </div>
                     </div>
