--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMP.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMP.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-primary">
-            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo de Mantenimiento Correctivo</div>
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo de Mantenimiento Preventivo</div>
 
             <div class="panel-body">
                 <form id="FormBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "ODTMantenimientoPreventivo")" data-nqn-target="#searchODTResults">
@@ -31,7 +31,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary" />
+                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary pull-right" />
                             </div>
                         </div>
                     </div>
