--- a/EquiposTecnicosSN.Web/Views/ChecklistsMantenimientoPreventivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ChecklistsMantenimientoPreventivo/Index.cshtml
@@ -1,68 +1,43 @@
-﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.ChecklistMantenimientoPreventivo>
+﻿@model IPagedList<EquiposTecnicosSN.Entities.Mantenimiento.ChecklistMantenimientoPreventivo>
 @{
-    ViewBag.Title = "Checklists Mantenimiento Preventivo";
+    ViewBag.Title = "Checklists para Mantenimiento Preventivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Checklist</div>
+            <div class="panel-body">
+                <div class="row">
+                    <form method="get" data-nqn-ajax="true" action="@Url.Action("Index", "ChecklistsMantenimientoPreventivo")" data-nqn-target="#checklistsList">
+                        <div class="col-lg-1">
+                            <label class="control-label" style="margin-top: 5px;">Nombre</label>
+                        </div>
+                        <div class="col-lg-9">
+                            <input type="text" id="searchChecklist" name="searchChecklist" class="form-control text-box single-line" />
+                        </div>
+                        <div class="col-lg-2">
+                            <input id="buscar" type="submit" value="Buscar" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><i class="fa fa-list-alt fa-fw"></i> Listado de @ViewBag.Title</div>
             <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        @Html.ActionLink("Nuevo", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
-                    </div>
-                </div>
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <table id="table-equipos-climatizacion" class="table table-hover table-responsive table-condensed table-striped">
-                            <thead>
-
-                                <tr>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Nombre)
-                                    </th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-
-
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Nombre)
-                                        </td>
-                                        <td>
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Edit", new { id = item.ChecklistMantenimientoPreventivoId })"
-                                               title="Editar Equipo">
-                                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                            </a>
-
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Download", new { id = item.ChecklistMantenimientoPreventivoId })"
-                                               title="Descargar">
-                                                <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                                            </a>
-                                            <!--
-                                                
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Delete", new { id = item.ChecklistMantenimientoPreventivoId })"
-                                               title="Eliminar Equipo">
-                                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                            </a>
-                                            -->
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-
-                        </table>
+                        <div id="checklistsList">
+                            @Html.Partial("_ChecklistsList", Model)
+                        </div>
                     </div>
                 </div>
             </div>
