--- a/EquiposTecnicosSN.Web/Views/Modelos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Modelos/Index.cshtml
@@ -37,7 +37,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Marca.Nombre)
                                     </td>
-                                    <td>
+                                    <td class="action-columns">
                                         <a class="btn btn-default btn-xs"
                                            href="@Url.Action("Edit", new { id = item.ModeloId })"
                                            title="Editar Modelo">
