--- a/EquiposTecnicosSN.Web/Views/Repuestos/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Repuestos/Create.cshtml
@@ -8,9 +8,11 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    @Html.EditorFor(model => model)
-
+    <div class="row">
+        <div class="col-lg-12">
+            @Html.EditorFor(model => model)
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
