--- a/EquiposTecnicosSN.Web/Views/Repuestos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Repuestos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.Repuesto>
+﻿@model IPagedList<EquiposTecnicosSN.Entities.Mantenimiento.Repuesto>
 
 @{
     ViewBag.Title = "Repuestos";
@@ -7,70 +7,52 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">@ViewBag.Title</div>
+        <div class="panel panel-primary">
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Repuesto</div>
             <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        @Html.ActionLink("Nuevo", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
+                <form id="formBuscarRepuestos" method="get" data-nqn-ajax="true" action="@Url.Action("Index", "Repuestos")" data-nqn-target="#repuestosList">
+                    <div class="row" style="margin-bottom: 10px;">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="control-label" style="margin-top: 5px;">Nombre</label>
+                                <input type="text" id="searchNombre" name="searchNombre" class="form-control text-box single-line" />
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label" style="margin-top: 5px;">C&oacute;digo</label>
+                                <input type="text" id="searchCodigo" name="searchCodigo" class="form-control text-box single-line" />
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="control-label" style="margin-top: 5px;">Proveedor</label>
+                                @Html.DropDownList("proveedorId", null, "Seleccione", htmlAttributes: new { @class = "form-control" })
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <input id="buscarRepuesto" type="submit" value="Buscar" class="btn btn-primary pull-right" />
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading"><i class="fa fa-gears fa-fw"> </i> Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <table id="table-equipos-climatizacion" class="table table-hover table-responsive table-condensed table-striped">
-                            <thead>
+                        <div id="repuestosList">
+                            @Html.Partial("_RepuestosList", Model)
+                        </div>
 
-                                <tr>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Codigo)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Nombre)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Proveedor)
-                                    </th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Codigo)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Nombre)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Proveedor.Nombre)
-                                        </td>
-                                        <td>
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Edit", new { id = item.RepuestoId })"
-                                               title="Editar Equipo">
-                                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                            </a>
-
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Details", new { id = item.RepuestoId })"
-                                               title="Ver Equipo">
-                                                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                            </a>
-                                            <a class="btn btn-default btn-xs"
-                                               href="@Url.Action("Delete", new { id = item.RepuestoId })"
-                                               title="Eliminar Equipo">
-                                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                            </a>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-
-                        </table>
                     </div>
                 </div>
             </div>
