--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
@@ -31,7 +31,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary" />
+                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary pull-right" />
                             </div>
                         </div>
                     </div>
