--- a/EquiposTecnicosSN.Web/Views/Shared/_TrasladarEquipoContent.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_TrasladarEquipoContent.cshtml
@@ -5,8 +5,8 @@
         @Html.HiddenFor(model => model.EquipoId)
         <div class="form-group">
             @Html.LabelFor(model => model.UbicacionOrigenId, "Ubicación de origen", htmlAttributes: new { @class = "control-label" })
-            @Html.DropDownList("UbicacionOrigenId", null, htmlAttributes: new { @class = "form-control  ddl-traslado-origen" })
-            @Html.ValidationMessageFor(model => model.UbicacionOrigenId, "", new { @class = "text-danger" })
+            @Html.DropDownList("UbicacionOrigenId", null, htmlAttributes: new { @class = "form-control  ddl-traslado-origen", disabled = "disabled" })
+            @Html.HiddenFor(model => model.UbicacionOrigenId)
         </div>
     </div>
 </div>
@@ -15,7 +15,6 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UbicacionDestinoId, "Ubicación de destino", htmlAttributes: new { @class = "control-label" })
             @Html.DropDownList("UbicacionDestinoId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.UbicacionDestinoId, "", new { @class = "text-danger" })
         </div>
     </div>
 </div>
