--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Create.cshtml
@@ -1,35 +1,24 @@
 ﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Ubicacion
 
 @{
-    ViewBag.Title = "Ubicación";
+    ViewBag.Title = "Nueva Ubicación";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">Nueva @ViewBag.Title</div>
-                <div class="panel-body">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            @Html.AntiForgeryToken()
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @Html.EditorFor(model => model)
         </div>
     </div>
-    <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
-    <input type="submit" value="Guardar" class="btn btn-primary" />
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+            <input type="submit" value="Guardar" class="btn btn-primary" />
+        </div>
+    </div>
 }
 
