--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Edit.cshtml
@@ -1,33 +1,16 @@
 ﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Ubicacion
 
 @{
-    ViewBag.Title = "Ubicación";
+    ViewBag.Title = "Editar Ubicación";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">Editar @ViewBag.Title</div>
-                <div class="panel-body">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            @Html.AntiForgeryToken()
-                            @Html.HiddenFor(model => model.UbicacionId)
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @Html.EditorFor(model => model)
         </div>
     </div>
     <div class="row">
