--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Index.cshtml
@@ -7,53 +7,38 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">Listado de @ViewBag.Title</div>
+        <div class="panel panel-primary">
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Ubicaci&oacute;n</div>
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-lg-12">
-                        @Html.ActionLink("Nuevo", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
-                    </div>
+                    <form id="formBuscarUbicacion" method="get" data-nqn-ajax="true" action="@Url.Action("Index", "Ubicaciones")" data-nqn-target="#ubicacionesList">
+                        <div class="col-lg-2">
+                            <label class="control-label" style="margin-top: 5px;">Nombre</label>
+                        </div>
+                        <div class="col-lg-8">
+                            <input type="text" id="searchUbicacion" name="searchUbicacion" class="form-control text-box single-line" />
+                        </div>
+                        <div class="col-lg-2">
+                            <input id="buscarUbicacion" type="submit" value="Buscar" class="btn btn-primary" />
+                        </div>
+                    </form>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading"><i class="fa fa-hospital-o fa-fw"></i> Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <table class="table table-hover table-responsive table-condensed table-striped">
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Nombre)
-                                </th>
-                                <th></th>
-                            </tr>
-
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Nombre)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Edit", new { id = item.UbicacionId })"
-                                           title="Editar Ubicación">
-                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
-
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Details", new { id = item.UbicacionId })"
-                                           title="Ver Ubicación">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Delete", new { id = item.UbicacionId })"
-                                           title="Eliminar Ubicación">
-                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-
-                        </table>
+                        <div id="ubicacionesList">
+                            @Html.Partial("_UbicacionesList", Model)
+                        </div>
                     </div>
                 </div>
             </div>
