--- a/EquiposTecnicosSN.Web/Views/Umdns/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Umdns/Create.cshtml
@@ -1,8 +1,10 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo
+﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Umdns
+
 @{
-    ViewBag.Title = "Orden de Trabajo";
+    ViewBag.Title = "Nuevo Código UMDNS";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -14,13 +16,9 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
+                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </div>
     </div>
-    <input type="hidden" name="equipoId" id="equipoId" value="@ViewBag.EquipoId"/>
 }
-<hr />
-<div>
-    @Html.ActionLink("Volver", "Index")
-</div>
