--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -80,9 +80,7 @@
                                         <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
                                         <li>@Html.ActionLink("Sectores", "Index", "Sectores")</li>
                                         <li>@Html.ActionLink("Códigos UMDNS", "Index", "Umdns")</li>
-                                        <li>@Html.ActionLink("Fabricantes", "Index", "Fabricantes")</li>
-                                        <li>@Html.ActionLink("Marcas", "Index", "Marcas")</li>
-                                        <li>@Html.ActionLink("Modelos", "Index", "Modelos")</li>
+                                        <li>@Html.ActionLink("Fabricantes, Marcas y Modelos", "Index", "Fabricantes")</li>
                                     </ul>
                                     <!-- /.nav-second-level -->
                                 </li>
