--- a/EquiposTecnicosSN.Web/Views/StockRepuestos/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/StockRepuestos/Edit.cshtml
@@ -1,10 +1,9 @@
-﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Fabricante
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.StockRepuesto
 
 @{
-    ViewBag.Title = "Editar Fabricante";
+    ViewBag.Title = "Editar Stock";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 
 @using (Html.BeginForm())
 {
