--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -87,9 +87,9 @@
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <a href="@Url.Action("Index", "StockRepuestos")">
                 <div class="panel-footer">
-                    <span class="pull-left">Ver Críticos</span>
+                    <span class="pull-left">Ver Stock</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
