--- a/EquiposTecnicosSN.Web/Views/Marcas/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Marcas/Create.cshtml
@@ -26,8 +26,8 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 @Html.LabelFor(model => model.FabricanteId, "Fabricante", htmlAttributes: new { @class = "control-label" })
-                                @Html.DropDownList("FabricanteId", null, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.FabricanteId, "", new { @class = "text-danger" })
+                                @Html.DropDownList("FabricanteId", null, htmlAttributes: new { @class = "form-control", disabled = "disabled" })
+                                @Html.HiddenFor(model => model.FabricanteId)
                             </div>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+                    <a href="@Url.Action("Index", new { fabricanteId = Model.FabricanteId })" class="btn btn-default"> Volver</a>
                     <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
             </div>
