--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Proveedor.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Proveedor.cshtml
@@ -2,8 +2,8 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">@ViewBag.Title</div>
+        <div class="panel panel-@(ViewBag.PanelStyle != null ? ViewBag.PanelStyle : "default")">
+            <div class="panel-heading"><i class="fa fa-truck fa-fw"></i> @ViewBag.Title</div>
             <div class="panel-body">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.ProveedorId)
