--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Fabricante.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Fabricante.cshtml
@@ -1,30 +1,22 @@
-﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model ChecklistMantenimientoPreventivo
+﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Fabricante
 
 <div class="panel panel-default">
-    <div class="panel-heading"><i class="fa fa-list-alt fa-fw"></i> @ViewBag.Title</div>
+    <div class="panel-heading">@ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ChecklistMantenimientoPreventivoId)
+        @if (Model.FabricanteId != 0)
+        {
+            @Html.HiddenFor(model => model.FabricanteId)
+        }
 
         <div class="row">
-            <div class="col-md-12">
-
+            <div class="col-md-6">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                 </div>
-
-
-                <div class="form-group">
-                    <label class="control-label" for="ChecklistFile">Archivo</label>
-                    <input type="file" id="ChecklistFile" name="checklistFile" 
-                           accept="application/pdf"/>
-                </div>
             </div>
-
         </div>
-
     </div>
 </div>
