--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Proveedor.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Proveedor.cshtml
@@ -3,10 +3,13 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">@ViewBag.Title</div>
+            <div class="panel-heading"><i class="fa fa-truck fa-fw"></i> @ViewBag.Title</div>
             <div class="panel-body">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.ProveedorId)
+                @if (Model.ProveedorId != 0)
+                {
+                    @Html.HiddenFor(model => model.ProveedorId)
+                }
 
                 <div class="row">
                     <div class="col-md-12">
@@ -49,16 +52,20 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label" })
-                        @Html.TextAreaFor(model => model.Direccion, htmlAttributes: new { @class = "form-control", rows = 5 })
-                        @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label" })
+                            @Html.TextAreaFor(model => model.Direccion, htmlAttributes: new { @class = "form-control", rows = 5 })
+                            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        @Html.LabelFor(model => model.Servicios, htmlAttributes: new { @class = "control-label" })
-                        @Html.TextAreaFor(model => model.Servicios, new { @class = "form-control", rows = 5 })
-                        @Html.ValidationMessageFor(model => model.Servicios, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Servicios, htmlAttributes: new { @class = "control-label" })
+                            @Html.TextAreaFor(model => model.Servicios, new { @class = "form-control", rows = 5 })
+                            @Html.ValidationMessageFor(model => model.Servicios, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
             </div>
