--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Repuesto.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Repuesto.cshtml
@@ -4,7 +4,10 @@
     <div class="panel-heading"><i class="fa fa-gears fa-fw"></i>@ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.RepuestoId)
+        @if (Model.RepuestoId != 0)
+        {
+            @Html.HiddenFor(model => model.RepuestoId)
+        }
 
         <div class="row">
             <div class="col-md-12">
@@ -36,7 +39,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Proveedor, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownList("ProveedorId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("ProveedorId", null, "Seleccione", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Proveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
