--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
@@ -68,7 +68,7 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="searchEquipoResults">
+                        <div id="searchEquipoResults" class="ajax-result-list">
                         </div>
                     </div>
                 </div>
