--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMP.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMP.cshtml
@@ -38,7 +38,7 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="searchODTResults">
+                        <div id="searchODTResults" class="ajax-result-list">
                         </div>
                     </div>
                 </div>
