--- a/EquiposTecnicosSN.Web/Views/StockRepuestos/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/StockRepuestos/Create.cshtml
@@ -1,24 +1,23 @@
-﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Ubicacion
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.StockRepuesto
 
 @{
-    ViewBag.Title = "¿Seguro que desea eliminar este Elemento?";
-    ViewBag.PanelStyle = "danger";
+    ViewBag.Title = "Nuevo Stock";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
     <div class="row">
         <div class="col-lg-12">
-            @Html.DisplayFor(model => model)
+            @Html.EditorFor(model => model)
         </div>
     </div>
     <div class="row">
         <div class="col-lg-12">
             <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
+            <input type="submit" value="Guardar" class="btn btn-primary" />
         </div>
     </div>
 }
