--- a/EquiposTecnicosSN.Web/Views/StockRepuestos/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/StockRepuestos/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Marca
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.StockRepuesto
 
 @{
     ViewBag.Title = "¿Seguro que desea eliminar este Elemento?";
@@ -17,8 +17,9 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <a href="@Url.Action("Index", new { fabricanteId = Model.FabricanteId })" class="btn btn-default"> Volver</a>
+            <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
             <input type="submit" value="Eliminar" class="btn btn-danger" />
         </div>
     </div>
 }
+
