--- a/EquiposTecnicosSN.Web/Views/Umdns/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Umdns/Delete.cshtml
@@ -17,5 +17,5 @@
     </div>
 
     <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
-    <input type="submit" value="Eliminar" class="btn btn-primary" />
+    <input type="submit" value="Eliminar" class="btn btn-danger" />
 }
