--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         
                     <a href="@Url.Action("Index", "Home", new { area = "" })"
                        class="navbar-brand app-logo">
-                        SGRF - Salud Neuqu&eacute;n
+                        S.G.R.F. - Salud Neuqu&eacute;n
                     </a>
                 </div>
 
