--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Close.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Close.cshtml
@@ -100,7 +100,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             @Html.LabelFor(model => Model.Odt.DetalleReparacion, htmlAttributes: new { @class = "control-label" })
-                            @Html.TextAreaFor(model => Model.Odt.DetalleReparacion, htmlAttributes: new { @class = "form-control" })
+                            @Html.TextAreaFor(model => Model.Odt.DetalleReparacion, htmlAttributes: new { @class = "form-control", rows = 5, data_val = "true", data_val_required = "El Detalle de la reparación es requerido." })
                             @Html.ValidationMessageFor(model => Model.Odt.DetalleReparacion, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             @Html.LabelFor(model => Model.Odt.CausaRaiz, htmlAttributes: new { @class = "control-label" })
-                            @Html.TextAreaFor(model => Model.Odt.CausaRaiz, htmlAttributes: new { @class = "form-control" })
+                            @Html.TextAreaFor(model => Model.Odt.CausaRaiz, htmlAttributes: new { @class = "form-control", rows = 5 })
                             @Html.ValidationMessageFor(model => Model.Odt.CausaRaiz, "", new { @class = "text-danger" })
                         </div>
                     </div>
