--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Close.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Close.cshtml
@@ -110,8 +110,11 @@
                                 @Html.EditorFor(model => model.Odt.ChecklistCompleto, new { @class = "form-control" })
                             </div>
                             <div class="form-group">
-                                <label class="control-label" for="ChecklistFile">Subir una copia del archivo completo</label>
-                                <input type="file" id="@Html.IdFor(model => model.ChecklistCompletoFile)" name="@Html.NameFor(model => model.ChecklistCompletoFile)" accept="application/pdf, image/jpeg, image/png" required />
+                                <label class="control-label" for="ChecklistFile">Subir una copia del checklist completo</label>
+                                <input type="file" id="@Html.IdFor(model => model.ChecklistCompletoFile)" name="@Html.NameFor(model => model.ChecklistCompletoFile)" accept="application/pdf, image/jpeg, image/png" 
+                                       data-val="true"
+                                       data-val-required="Debe adjuntar una foto o documento PDF del checklist completo."/>
+                                @Html.ValidationMessageFor(model => Model.ChecklistCompletoFile, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
