--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/SolicitudRepuestoServicio.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/SolicitudRepuestoServicio.cshtml
@@ -6,28 +6,23 @@
             @Html.LabelFor(model => model.Repuesto.Codigo, htmlAttributes: new { @class = "control-label" })
             <input class="form-control text-box single-line"
                    data-autocomplete-codigo-repuesto="@Url.Action("AutocompleteCodigoRepuesto", "Repuestos")"
-                   data-val="true"
-                   data-val-maxlength="El campo Nombre completo debe tener menos de 50 caracteres."
-                   data-val-maxlength-max="50"
+                   data-val="false"
                    id="@Html.IdFor(model => model.Repuesto.Codigo)"
                    name="@Html.NameFor(model => model.Repuesto.Codigo)" type="text" value="@Model.Repuesto.Codigo">
 
-            @Html.ValidationMessageFor(model => model.Repuesto.Codigo, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="col-md-2">
         <div class="form-group">
             @Html.LabelFor(model => model.CantidadRepuesto, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.CantidadRepuesto, new { htmlAttributes = new { @class = "form-control", data_stock_repuesto = Url.Action("CheckStockRepuesto") } })
-            @Html.ValidationMessageFor(model => model.CantidadRepuesto, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.CantidadRepuesto, new { htmlAttributes = new { @class = "form-control", data_val = "false", data_stock_repuesto = Url.Action("CheckStockRepuesto") } })            
         </div>
     </div>
 
     <div class="col-md-8">
         <div class="form-group">
             @Html.LabelFor(model => model.Repuesto.Nombre, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Repuesto.Nombre, new { htmlAttributes = new { @class = "form-control", data_stock_repuesto = Url.Action("CheckStockRepuesto") } })
-            @Html.ValidationMessageFor(model => model.Repuesto.Nombre, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Repuesto.Nombre, new { htmlAttributes = new { @class = "form-control", data_val = "false", data_stock_repuesto = Url.Action("CheckStockRepuesto") } })            
         </div>
     </div>
 </div>
