--- a/EquiposTecnicosSN.Web/Views/EquipamientosEdilicios/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquipamientosEdilicios/Create.cshtml
@@ -13,9 +13,10 @@
             @Html.EditorFor(model => model)
             @Html.EditorFor(model => model.InformacionHardware)
             @Html.EditorFor(model => model.InformacionComercial)
+            @Html.Partial("_NotasEquipo", Model)
         </div>
     </div>
 
-    <a href="@Url.Action("Index", "EquiposBase")" class="btn btn-default"> Volver</a>
-    <input type="submit" value="Guardar" class="btn btn-primary" />
+            <a href="@Url.Action("Index", "EquiposBase")" class="btn btn-default"> Volver</a>
+            <input type="submit" value="Guardar" class="btn btn-primary" />
 }
