--- a/EquiposTecnicosSN.Web/Views/EquiposBase/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposBase/Details.cshtml
@@ -29,9 +29,21 @@
     </div>
 }
 
+<div class="row">
+    <div class="col-lg-12">
+        @Html.Partial("_DisplayNotasEquipo", Model)
+    </div>
+</div>
+
 @Html.Partial("_OrdenesDeTrabajoEquipo", Model)
 
 @Html.Partial("_TrasladosEquipoModal", Model.Traslados)
 
-<a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+@Html.Partial("_IndicadoresEquipoModal")
 
+<div class="row">
+    <div class="col-lg-12">
+        <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+        <input id="indicadoresBtn" type="button" class="btn btn-info" data-toggle="modal" data-target="#modalIndicadoresEquipo" data-equipo-id="@Model.EquipoId" value="Calcular Indicadores" />
+    </div>
+</div>
