--- a/EquiposTecnicosSN.Web/Views/EquiposSoporteDeVida/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposSoporteDeVida/Create.cshtml
@@ -13,6 +13,7 @@
             @Html.EditorFor(model => model)
             @Html.EditorFor(model => model.InformacionHardware)
             @Html.EditorFor(model => model.InformacionComercial)
+            @Html.Partial("_NotasEquipo", Model)
         </div>
     </div>
     
