--- a/EquiposTecnicosSN.Web/Views/Indicadores/PorUbicacion.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Indicadores/PorUbicacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Indicadores";
+    ViewBag.Title = "Indicadores por Ubicación";
 }
 
 <!-- UBICACION Y SECTORES -->
@@ -19,6 +19,16 @@
                         </div>
                         <div class="col-lg-11">
                             @Html.DropDownList("UbicacionId", null, "Todas", htmlAttributes: new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row" style="margin-bottom: 20px;">
+                        <div class="col-lg-6">
+                            <label style="margin-top: 5px;">Fecha de Incio</label>
+                            <input class="form-control date-picker text-box single-line" id="fechaInicio" name="fechaInicio" type="datetime" value="">
+                        </div>
+                        <div class="col-lg-6">
+                            <label style="margin-top: 5px;">Fecha de Fin</label>
+                            <input class="form-control date-picker text-box single-line" id="fechaFin" name="fechaFin" type="datetime" value="">
                         </div>
                     </div>
                     <hr />
