--- a/EquiposTecnicosSN.Web/Views/Indicadores/_IndicadoresPorUMDNSTable.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Indicadores/_IndicadoresPorUMDNSTable.cshtml
@@ -17,10 +17,10 @@
                 TMI (%)
             </th>
             <th class="centered-column">
-                TMR (%)
+                TMPR (minutos)
             </th>
             <th class="centered-column">
-                TMEF (%)
+                TMEF (d&iacute;as)
             </th>
         </tr>
     </thead>
