--- a/EquiposTecnicosSN.Web/Views/Indicadores/_IndicadoresPorUbicacionTable.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Indicadores/_IndicadoresPorUbicacionTable.cshtml
@@ -20,10 +20,10 @@
                 TMI (%)
             </th>
             <th class="centered-column">
-                TMR (%)
+                TMPR (minutos)
             </th>
             <th class="centered-column">
-                TMEF (%)
+                TMEF (d&iacute;as)
             </th>
         </tr>
     </thead>
