--- a/EquiposTecnicosSN.Web/Views/Shared/_IndicadoresTable.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_IndicadoresTable.cshtml
@@ -14,11 +14,11 @@
             <td style="text-align: center;">@Html.DisplayFor(model => model.TiempoIndisponibilidad)&nbsp;%</td>
         </tr>
         <tr>
-            <td style="width:70%">Tiempo medio entre fallas</td>
+            <td style="width:70%">TMEF (d&iacute;as)</td>
             <td style="text-align: center;">@Html.DisplayFor(model => model.TiempoMedioEntreFallas)&nbsp;%</td>
         </tr>
         <tr>
-            <td style="width:70%">Tiempo medio de reparaci&oacute;n</td>
+            <td style="width:70%">TMPR (minutos)</td>
             <td style="text-align: center;">@Html.DisplayFor(model => model.TiempoMedioReparacion)&nbsp;%</td>
         </tr>
     </tbody>
