--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
@@ -19,6 +19,7 @@
                     @Html.HiddenFor(model => model.Odt.EquipoId)
                     @Html.HiddenFor(model => model.Odt.Estado)
                     @Html.HiddenFor(model => model.Odt.NumeroReferencia)
+                    @Html.HiddenFor(model => model.Odt.UsuarioInicio)
 
                     <div class="row">
                         <div class="col-md-6">
