--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Details.cshtml
@@ -7,6 +7,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@Html.Partial("_ODTMPUsersDetails", Model)
+
 <div class="row">
     <div class="col-md-12">
         @Html.DisplayFor(model => model)
@@ -16,7 +18,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <a href="@Url.Action("Details", Model.Equipo.WebController() ,new { id = Model.Equipo.EquipoId })" class="btn btn-default"> Volver</a>
+            <a href="@Url.Action("Details", "EquiposBase" ,new { id = Model.Equipo.EquipoId })" class="btn btn-default"> Volver</a>
 
             @if (OrdenDeTrabajoEstado.Abierta.Equals(Model.Estado) || OrdenDeTrabajoEstado.EsperaRepuesto.Equals(Model.Estado))
             {
