--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/CreateForEquipo.cshtml
@@ -18,6 +18,7 @@
                     @Html.HiddenFor(model => model.Odt.EquipoId)
                     @Html.HiddenFor(model => model.Odt.Estado)
                     @Html.HiddenFor(model => model.Odt.NumeroReferencia)
+                    @Html.HiddenFor(model => model.Odt.UsuarioInicio)
 
                     <div class="row">
                         <div class="col-md-6">
