--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Details.cshtml
@@ -7,6 +7,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@Html.Partial("_ODTMCUsersDetails", Model)
+
 <div class="row">
     <div class="col-md-12">
         @Html.DisplayFor(model => model)
