--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/SolicitudRepuestoServicio.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/SolicitudRepuestoServicio.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EquiposTecnicosSN.Entities.Mantenimiento.SolicitudRepuestoServicio
+
 <div class="row">
-    <div class="col-sm-6">
+    <div class="col-md-6">
         <div class="form-group">
             <label>
                 @Html.DisplayNameFor(model => model.FechaInicio)
@@ -9,21 +10,23 @@
                 @Html.DisplayFor(model => model.FechaInicio)
             </p>
         </div>
-        @if (Model.Proveedor != null)
-        {
-            <div class="form-group">
-                <label>
-                    @Html.DisplayNameFor(model => model.Proveedor)
-                </label>
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Proveedor.Nombre)
-                </p>
-            </div>
-        }
     </div>
-    @if (Model.FechaCierre != null)
-    {
-        <div class="col-sm-6">
+    <div class="col-md-6">
+        <div class="form-group">
+            <label>
+                Usuario de Inicio de la Solicitud
+            </label>
+            <p class="form-control-static">
+                @Html.DisplayFor(model => model.UsuarioInicio)
+            </p>
+        </div>
+    </div>
+</div>
+
+@if (Model.FechaCierre != null)
+{
+    <div class="row">
+        <div class="col-md-6">
             <div class="form-group">
                 <label>
                     @Html.DisplayNameFor(model => model.FechaCierre)
@@ -33,25 +36,21 @@
                 </p>
             </div>
         </div>
-    }
-</div>
-@if (Model.Comentarios != null)
-{
-    <div class="row">
-        <div class="col-sm-12">
+        <div class="col-md-6">
             <div class="form-group">
                 <label>
-                    @Html.DisplayNameFor(model => model.Comentarios)
+                    Usuario de Cierre de la Solicitud
                 </label>
                 <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Comentarios)
+                    @Html.DisplayFor(model => model.UsuarioCierre)
                 </p>
             </div>
         </div>
     </div>
 }
+
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-md-12">
         <div class="form-group">
             <label>
                 @Html.DisplayNameFor(model => model.Repuesto)
@@ -63,8 +62,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-6">
-        <div class="form-group">
+    <div class="col-md-2">
+        <div class="form-group" style="text-align:center">
             <label>
                 @Html.DisplayNameFor(model => model.Repuesto.Codigo)
             </label>
@@ -73,8 +72,8 @@
             </p>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="form-group">
+    <div class="col-md-2">
+        <div class="form-group" style="text-align:center">
             <label>
                 @Html.DisplayNameFor(model => model.CantidadRepuesto)
             </label>
@@ -83,4 +82,30 @@
             </p>
         </div>
     </div>
+    <div class="col-md-8">
+        <div class="form-group">
+            <label>
+                @Html.DisplayNameFor(model => model.Proveedor)
+            </label>
+            <p class="form-control-static">
+                @Html.DisplayFor(model => model.Proveedor.Nombre)
+            </p>
+        </div>
+    </div>
 </div>
+
+@if (Model.Comentarios != null)
+{
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>
+                    @Html.DisplayNameFor(model => model.Comentarios)
+                </label>
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Comentarios)
+                </p>
+            </div>
+        </div>
+    </div>
+}
