--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
     <div id="page-wrapper">
         <div class="container body-content">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <h3 class="page-header">@ViewBag.Title</h3>
                 </div>
             </div>
