--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <img src="@Url.Content("/Content/images/logo-nqn.png")"
+                <img src="@Url.Content("~/Content/images/logo-nqn.png")"
                      alt="Equipos Tecnicos"
                      style="max-height: 50px; padding-left: 5px;" />
 
