--- a/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
@@ -30,7 +30,7 @@
                             <div class="btn-group btn-group-justified">
                                 <a id="nuevoEquipoEndoscopia" href="@Url.Action("Create", "EquiposEndoscopia")" class="btn btn-primary">@TipoEquipo.Endoscopia.DisplayName()</a>
                                 <a id="nuevoEquipoGasesMedicinales" href="@Url.Action("Create", "EquiposGasesMedicinales")" class="btn btn-primary">@TipoEquipo.GasesMedicinales.DisplayName()</a>
-                                <a id="nuevoEquipoImagenes" href="@Url.Action("Create", "")" class="btn btn-primary">@TipoEquipo.Imagenes.DisplayName()</a>
+                                <a id="nuevoEquipoImagenes" href="@Url.Action("Create", "EquiposImagenes")" class="btn btn-primary">@TipoEquipo.Imagenes.DisplayName()</a>
                             </div>
                             <div class="btn-group btn-group-justified">
                                 <a id="nuevoEquipoInformatica" href="@Url.Action("Create", "EquiposInformatica")" class="btn btn-primary">@TipoEquipo.Informatica.DisplayName()</a>
