--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Sistema de Gesti&oacute;n de Recursos F&iacute;sicos - Salud Neuqu&eacute;n</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     @Styles.Render("~/bundles/nqn-css")
     @Styles.Render("~/bundles/bower-components-css")
     @Scripts.Render("~/bundles/modernizr-js")
